# gh-action-hw

./: .gitignore  Dockerfile  LICENSE  action.yml
.github/workflows/: main.yml
action/: Cargo.toml
action/src/: config.rs  installer.rs  main.rs  unused.rs
