[package]
name = "action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.1"
reqwest = { version = "0.11.12", use-default-features = false, features = ["json"] }
tokio = { version = "1.21.1", features = ["macros", "net", "rt"] }
